# fast-grep-rust

./: .gitignore  AGENTS.md  COMPACT_POSTINGS.md  Cargo.toml  README.md
.claude/skills/fast-grep/: SKILL.md
.github/workflows/: release.yml
benches/: baseline-30samples.json  baseline-v0.3.1.json  optimized-pre-tag.json  search.rs
docs/: index.html
scripts/: bench-diff.sh  bench.sh
scripts/token-cost/: README.md  requirements.txt  token_cost.py
src/: build.rs  cli.rs  daemon.rs  index.rs  lib.rs  main.rs  persist.rs  postenc.rs  render.rs  searcher.rs  trigram.rs
src/metal/: metal_impl.rs  mod.rs
tests/: case_insensitive.rs  compact.rs  context.rs  grep_compat.rs  mask.rs  migrate.rs  regex_correctness.rs  searcher_integration.rs  streaming_parity.rs
