[package]
name = "fast-grep"
version = "0.3.1"
edition = "2021"
authors = [
    "Gaston Milano <gmilano@genexus.com>",
    "Gustavo Brown Rodriguez <gustavo.brown@globant.com>",
]
description = "Indexed regex search. 6-25x faster than ripgrep on large codebases via sparse n-gram index, position masks, and mmap'd posting lists."
license = "MIT"
repository = "https://github.com/gmilano/fast-grep-rust"
homepage = "https://github.com/gmilano/fast-grep-rust"
documentation = "https://github.com/gmilano/fast-grep-rust"
readme = "README.md"
keywords = ["grep", "search", "regex", "index", "cli"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    "benches/data/**",
    "*.pdf",
    "docs/**",
    ".fgr/**",
    ".claude/**",
    "TASK.md",
    "AGENTS.md",
    "ADAPTIVE_FREQ.md",
    "SIMD_LITERAL.md",
]

[[bin]]
name = "fgr"
path = "src/main.rs"

[dependencies]
regex = "1"
rayon = "1"
roaring = "0.10"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
ignore = "0.4"
crc32fast = "1"
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
memchr = "2"
aho-corasick = "1"
notify = { version = "7", optional = true }
ctrlc = { version = "3", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
objc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
toml = "0.8"

[[bench]]
name = "search"
harness = false

[features]
default = ["daemon"]
daemon = ["dep:notify", "dep:ctrlc"]

[profile.release]
lto = true
codegen-units = 1

# Metadata for cargo-deb (used by the release workflow to build .deb packages)
[package.metadata.deb]
maintainer = "Gaston Milano <gmilano@genexus.com>"
copyright = "2026, Gaston Milano <gmilano@genexus.com>"
license-file = ["LICENSE", "0"]
extended-description = """\
fast-grep (fgr) is an indexed regex search tool. It builds a persistent
sparse n-gram index over a codebase so that subsequent searches become
sub-200ms lookups instead of multi-second full scans. Without an index it
falls back to a ripgrep-equivalent parallel scan."""
# Hardcoded so cross-arch .deb builds don't depend on dpkg-shlibdeps
# resolving foreign-arch shared libs on the build host.
depends = "libc6"
section = "utils"
priority = "optional"
assets = [
    ["target/release/fgr", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/fast-grep/README", "644"],
    ["LICENSE", "usr/share/doc/fast-grep/LICENSE", "644"],
]
